Move css to external file and avoid misaligned tables
Test Plan: Look at many, many tables and make sure rows don't go onto a second line.

Reviewers: eater

Reviewed By: eater

Differential Revision: http://phabricator.khanacademy.org/D7805

--- a/css/khan-exercise.css
+++ b/css/khan-exercise.css
@@ -963,6 +963,15 @@ span.hover-hint:hover {
     width: 55%;
 }
 
+#problemarea .reading-tables > span {
+    text-align: center;
+    width: 65px;
+}
+#problemarea .reading-tables > span:first-child {
+    text-align: left;
+    width: 100px;
+}
+
 #solutionarea .intuition-equation td {
     text-align: right;
     padding-left: 5px;
